<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alisovets.example.demofilemanager.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/default_filemanager_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_btn_caption" />

        <Button
            android:id="@+id/open_file_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_file_btn_caption" />

        <Button
            android:id="@+id/open_file_no_menu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_file_no_menu_btn_caption" />

        <Button
            android:id="@+id/open_text_file_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_text_file_btn_caption" />

        <Button
            android:id="@+id/save_file_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_text_file_btn_caption" />
    </LinearLayout>

</ScrollView>